Mon Sep 26 12:00:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gems/bundled_gems: update to minitest-5.9.1.

Mon Sep 26 11:50:03 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* tool/rbinstall.rb (gem): Don't install gemspec if no files will be
	  installed for the gem. This happens when the extension library is not
	  compiled.

Mon Sep 26 11:06:47 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* string.c (enc_strlen, rb_enc_strlen_cr): Avoid signed integer
	  overflow. The result type of a pointer subtraction may have the same
	  size as long. This fixes String#size returning an negative value on
	  i686-linux environment:

	    str = "\x00" * ((1<<31)-2))
	    str.slice!(-3, 3)
	    str.force_encoding("UTF-32BE")
	    str << 1234
	    p str.size

Sun Sep 25 22:48:06 2016  namusyaka  <namusyaka@gmail.com>

	* lib/erb.rb (ERB::Compiler::TrimScanner#stag): The :stag accessor
	  has already been available because it is defined in parent
	  Scanner class.  [Fix GH-1445]

Sun Sep 25 19:21:26 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* node.c (dump_array): remove duplicate header of NODE_ARRAY/
	  NODE_VALUES.

Sat Sep 24 22:26:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile, extmake, configuration): store
	  extra libraries to be installed.

	* tool/rbinstall.rb (ext-arch): install extra libraries.

	* ext/zlib/extconf.rb: install zlib if built.

Sat Sep 24 14:24:55 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* spec/README: update URL.

Sat Sep 24 11:28:22 2016  Koichi ITO  <koic.ito@gmail.com>

	* fix typos, "a" before "Integer" to "an".  [Fix GH-1438]

Sat Sep 24 10:19:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/misc/test_ruby_mode.rb (assert_indent): since write-region
	  in Emacs 25.1 no longer displays the "Wrote file" message, shows
	  the explicit message to check if successfully finished.
	  [ruby-core:77355] [Bug #12785]

	* test/misc/test_ruby_mode.rb (EXPR_SAVE): use a numeric prefix